k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratings-api
spec:
  selector:
    app: ratings-api
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
